objects/XML_Tag_Mapping__c.object
<CustomObject>
    <description>XML Tag Mapping Object contain the mapping for request attributes and lead api field to be sent to Wunderman.Aslo, there would be mapping between response xml tags and value from wunderman. With the help of this object we can create XML Schema dynamically.</description>
    <fields>
        <fullName>XML_Tag_Value__c</fullName>
        <description>Refer the Custom Field mapping for XML Tag</description>
        <label>XML Tag Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_Tag__c</fullName>
        <description>Refer to XML tag name for response and key for request</description>
        <label>XML Tag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XML_Type__c</fullName>
        <label>XML Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>XML Tag Mapping</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>XML Tag Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XML Tags Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>